# Arcanalyse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README-public.md  README.md  deploy.sh  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  alembic.ini  requirements-ci.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0b6635e32d0f_slice_1_lookups_cr_to_xp.py  455b70532c5b_slice_2_app_user.py  72c79ae4394a_slice_2_audit_not_null_created_by_id_.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/v1/: __init__.py  health.py  lookups.py  users.py  version.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  _base.py  cr_xp.py  enums.py  lookups.py  user.py
backend/app/repositories/: base.py  user_repository.py
backend/app/schemas/: base.py  lookups.py  user.py
backend/app/seeds/: system_user.py
backend/app/services/: password_service.py
backend/tests/: conftest.py  test_system.py
backend/tests/api/: conftest.py
backend/tests/unit/: conftest.py
docs/: context.md  index.md
docs/architecture/: data-model.md  overview.md
docs/decisions/: ADR-0001-env-und-settings.md  ADR-0002-lookups-ohne-timestamps.md  ADR-0003-alembic-workdir-und-config.md
docs/dev/: setup.md
docs/domain/: api.md  combat-mechanics.md  db-schema-lookups.md  difficulty-metrics.md  model.md  simulation-rules.md
docs/reference/: api.md  core.md  db.md  training.md
frontend/: .dockerignore  Dockerfile  compose.yaml  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/app/: App.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/impressum/: page.tsx
frontend/src/app/survey/: page.tsx
frontend/src/app/survey/[id]/: page.tsx
frontend/src/components/landing/: D20Icon.tsx  Features.tsx  Footer.tsx  Hero.tsx  OrnamentDivider.tsx  Problem.tsx  Signup.tsx  Solution.tsx  SurveyCallout.tsx
frontend/src/components/survey/: EmailCapture.tsx  SurveyComplete.tsx  SurveyRenderer.tsx
frontend/src/components/survey/questions/: Consent.tsx  MultipleChoiceMulti.tsx  MultipleChoiceSingle.tsx  OpenText.tsx  Rating.tsx
frontend/src/features/encounter-builder/api/: system.ts
frontend/src/lib/: formbricks.ts
frontend/src/shared/lib/: api.ts
frontend/src/test/: handlers.ts  server.ts  setup.ts  utils.tsx
frontend/src/types/: svg.d.ts
infra/: Caddyfile.snippet  docker-compose.prod.yml  init-databases.sql
