[project]
name = "arcanalyse-api"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "wediga" }
]
dependencies = [
    "arcanalyse-core",
    "arcanalyse-db",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
arcanalyse-core = { workspace = true }
arcanalyse-db   = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[tool.pytest.ini_options]
testpaths = [
    "packages/arcanalyse-db/tests",
    "packages/arcanalyse-core/tests",
    "src/arcanalyse_api/tests",
]
markers = [
    "db: requires PostgreSQL database connection",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["arcanalyse_api", "arcanalyse_core", "arcanalyse_db", "arcanalyse_training"]
